# internal/models/account.go
@@ -1,15 +1,8 @@
 package models
 
-type User struct {
+type Account struct {
 	BaseModel
-	Email    string `json:"email" gorm:"unique"`
-	Password string `json:"password"`
-	Role     string `json:"role"`
-}
-
-type RobotAccount struct {
-	BaseModel
-	Name     string `json:"name" gorm:"unique"`
-	Password string `json:"password"`
-	Role     string `json:"role"`
+	Email          string `json:"email" gorm:"unique"`
+	HashedPassword string `json:"hashed_password"`
+	Role           string `json:"role"`
 }
