# internal/models/models.go
@@ -2,11 +2,10 @@ package models
 
 func Models() []interface{} {
 	return []interface{}{
-		&Processing{},
-		&ProcessingStep{},
 		&Video{},
-		&User{},
-		&RobotAccount{},
+		&Account{},
 		&Token{},
+		&ProcessingStep{},
+		&Processing{},
 	}
 }
